<resources>
    <string name="app_name">MindCare</string>
    <string name="welcome_to">Welcome to</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="electrocardiogram_image">Electrocardiogram image</string>
    <string name="meditation_image">Meditation image</string>
    <string name="exercising_image">Exercising image</string>
    <string name="meeting_up_image">Meeting up image</string>
    <string name="breathing_practice">Breathing practice</string>
    <string name="meditation_activity">Meditation activity</string>
    <string name="physical_exercise">Physical exercise</string>
    <string name="mindfulness_meditation_can_reduce_stress_and_increase_well_being">Mindfulness meditation can reduce stress and increase well-being.</string>
    <string name="abdominal_breathing_brings_about_a_range_of_health_benefits">Abdominal breathing brings about a range of health benefits.</string>
    <string name="because_your_mind_and_body_are_one_practice_for_your_well_being">Because your mind and body are one, practice for your well-being.</string>
    <string name="join_the_community">Join the community</string>
    <string name="we_are_more_likely_to_achieve_our_goals_if_we_are_in_a_community">We are more likely to achieve our goals if we are in a community.</string>
    <string name="welcome">Welcome</string>
    <string name="photo_of_user">Photo of user</string>
    <string name="shows_images_for_the_dashboard">shows images for the dashboard</string>
    <string name="name_of_the_user">name of the user</string>
    <string name="your_name">your name</string>
    <string name="skip_tour">Skip tour</string>
    <string name="a_man_sitting_on_the_floor">A man sitting on the floor</string>
    <string name="whether_it_is_breathing_conrrol_meditation_or_doing_physical_exercises_we_might_just_have_the_activities_and_tips_for_you">Whether it is breathing conrrol, meditation, or doing physical exercises, we might just have the activities and tips for you.</string>
    <string name="intro_1_description_play_and_discover">Intro 1 description, play and discover</string>
    <string name="play_and_discover_ways_to_relax">Play and Discover Ways to Relax</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="breathing">Breathing</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Breathing_practice_title">First, exhale completely. Then repeat :</string>
    <string name="Inhale_text">Inhale (4 secs).</string>
    <string name="Exhale_text">Exhale (6 secs).</string>
    <string name="Final_sentence">Repeat 33 times (5 mins).</string>
    <string name="Start_Btn">Start</string>
    <string name="reset_btn">Reset</string>
    <string name="Return_arrow">Back arrow icon</string>
    <string name="Exhale_image">Exhale image</string>
    <string name="Inhale_image">Inhale image</string>
    <string name="SIGNUPPREFERENCES">SIGNUPPREFS</string>
    <string name="welcome_image_desc">A person waters a metaphorical plant on top of a head statue</string>
    <string name="Signup_title">Hello Beautiful</string>
    <string name="Username_Input">Your username</string>
    <string name="Email_input">Your email</string>
    <string name="Password">Password</string>
    <string name="giant_notepad_with_tiny_man_and_a_laptop">Giant notepad with tiny man and a laptop</string>
    <string name="Welcome_login_msg">Welcome back !</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="appearance_settings">Appearance Settings</string>
    <string name="appearance_dialog">Appearance Dialog</string>
    <string name="appearance_dialog_message">Appearance setting is successful</string>
    <string name="set_a_mode">Please click on below to set a mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="contact">Contact</string>
    <string name="statistics">Statistics</string>
    <string name="language_settings">Language Settings</string>
    <string name="set_a_language">Please click on below to set a language</string>
    <string name="english_language">English</string>
    <string name="french_language">French</string>
    <string name="settings">Settings</string>
    <string name="future_works_settings">Future works required</string>
    <string name="future_works_message">Sorry, future works are required on your clicked activity.</string>
    <string name="close">Close</string>
</resources>